pingpong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-api-deployment
  namespace: exercises
  labels:
    app: pingpong-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-api
  template:
    metadata:
      labels:
        app: pingpong-api
    spec:
      containers:
        - name: pingpong-api-container
          image: PINGPONG-API/IMAGE
          ports:
            - containerPort: 3000

          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /ready
              port: 3000
