pingpong/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingpong-db-statefulset
  namespace: exercises
spec:
  serviceName: pingpong-db-svc
  replicas: 1

  selector:
    matchLabels:
      app: pingpong-db

  template:
    metadata:
      labels:
        app: pingpong-db
    spec:
      containers:
        - name: pingpong-database-container
          image: POSTGRES/IMAGE

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: pingpong-init
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql
              readOnly: true

            - name: pingpong-db-data
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: pingpong-init
          configMap:
            name: pingpong-configmap

  volumeClaimTemplates:
    - metadata:
        name: pingpong-db-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
