pingpong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-api-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: pingpong-api
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: pingpong-db-svc
  namespace: exercises
spec:
  selector:
    app: pingpong-db
  clusterIP: None
